<resources>
    <string name="app_name">Curso</string>
    <string name="txt_bienvenido_login">Bienvenido a Bordo</string>
    <string name="txt_iniciar_sesion">Iniciar Sesión</string>
    <string name="txt_registrarse">Registrarse</string>
    <string name="txt_inicio">Iniciar Sesión</string>
    <string name="txt_continuar">Continuar</string>
    <string name="txt_aviso">Al iniciar sesión aceptas los términos y condiciones y políticas de privacidad.</string>
    <string name="txt_correo">Correo Electrónico</string>
    <string name="txt_password">Contraseña</string>
    <string name="txt_name">Nombre</string>
    <string name="txt_olvidar_contraseña">¿Olvidó su contraseña?</string>
    <string name="rb_mantenerSesion">Mantener Sesión Abierta</string>
    <string name="txt_registrarse_inicio_sesion">¿Aún no tienes una cuenta? Registrarse</string>
    <string name="txt_inicio_sesion_registrarse">¿Ya tienes una cuenta? Iniciar Sesión</string>
    <string name="txt_contraseña_sugerencia">Ingresa una contraseña que contenga al menos 8 caracteres entre mayúsculas, minúsculas y números.</string>
    <string name="txt_mipedido">Enviar Pedido</string>
    <string name="txt_direccion">Investigación Científica, C.U., Coyoacán, 04510</string>
    <string name="txt_userinfo">Joel Arroyo  +5587675423</string>
    <string name="txt_deliveryMethod">Método de entrega</string>
    <string name="txt_meetAtDoor">Entrega en puerta</string>
    <string name="txt_paymentMethod">Método de pago</string>
    <string name="txt_cashMethod">Efectivo</string>
    <string name="txt_utensils">Cubiertos y popotes</string>
    <string name="txt_tip">Propina</string>
    <string name="txt_confirmar">Confirmar</string>
    <string name="txt_tipMessage">Muestra tu apoyo con tu propina. Los mensajeros reciben el 100% de las propinas.</string>
    <string name="bt_tip10">MX$10.00</string>
    <string name="bt_tip15">MX$15.00</string>
    <string name="bt_tip20">MX$20.00</string>
    <string name="bt_tipOther">Otro</string>
    <string name="txt_paymenthDetails">Detalles de pago</string>
    <string name="txt_itemTotal">Total de artículos</string>
    <string name="txt_itemTotalValue">MX$178.00</string>
    <string name="txt_deliveryFee">Tarifa de entrega</string>
    <string name="txt_deliveryFeeValue">MX$48.00</string>
    <string name="txt_coupons">Planet Cupones</string>
    <string name="txt_couponMessage">Actualmente no disponible</string>
    <string name="txt_Total">Total</string>
    <string name="txt_TotalValue">MX$226.00</string>
    <string name="txt_saved">MX$178.00</string>
    <string name="txt_next">Siguiente</string>
    <string-array name="cantidad_pizza">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="TituloPiiza1">Pizza Italiana</string>
    <string name="TituloPiiza2">Pizza Salami</string>
    <string name="TituloPiiza3">Pizza Vegetariana</string>
    <string name="PrecioPiiza1">$250</string>
    <string name="PrecioPiiza2">$300</string>
    <string name="PrecioPiiza3">$350</string>
    <string name="BotonOrdenar">Ordenar</string>
    <string name="TituloElige">Elige tu pizza:</string>
</resources>
