<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/t"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3EDED"
    android:scrollbarSize="24sp"
    tools:context=".Confirmacion">

    <TextView
        android:id="@+id/txt_mipedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/txt_mipedido"
        android:textColor="#000000"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_direccion"
        android:layout_width="368dp"
        android:layout_height="22dp"
        android:layout_marginTop="24dp"
        android:drawableEnd="@drawable/right24px"
        android:text="@string/txt_direccion"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_mipedido" />

    <TextView
        android:id="@+id/txt_userinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_userinfo"
        android:textColor="#000000"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_direccion"
        app:layout_constraintVertical_bias="0.011" />

    <TextView
        android:id="@+id/txt_deriveryM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txt_deliveryMethod"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_userinfo" />

    <TextView
        android:id="@+id/txt_entrega"
        android:layout_width="136dp"
        android:layout_height="20dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="36dp"
        android:drawableEnd="@drawable/right24px"
        android:text="@string/txt_meetAtDoor"
        android:textColor="#020202"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.782"
        app:layout_constraintStart_toEndOf="@+id/txt_deriveryM"
        app:layout_constraintTop_toBottomOf="@+id/txt_direccion" />

    <TextView
        android:id="@+id/txt_paymentmethod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/txt_paymentMethod"
        android:textColor="#090909"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_deriveryM" />

    <TextView
        android:id="@+id/txt_cash"
        android:layout_width="75dp"
        android:layout_height="19dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:drawableEnd="@drawable/right24px"
        android:text="@string/txt_cashMethod"
        android:textColor="#070707"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_entrega" />

    <TextView
        android:id="@+id/txt_utensils"
        android:layout_width="369dp"
        android:layout_height="22dp"
        android:layout_marginTop="16dp"
        android:drawableEnd="@drawable/check24px"
        android:text="@string/txt_utensils"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_paymentmethod" />

    <TextView
        android:id="@+id/txt_tip"
        android:layout_width="86dp"
        android:layout_height="22dp"
        android:layout_marginTop="12dp"
        android:drawableEnd="@drawable/infocircle24px"
        android:text="@string/txt_tip"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_utensils" />

    <TextView
        android:id="@+id/txt_tipM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/txt_tipMessage"
        android:textColor="#4A4A4A"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.158"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_tip" />

    <Button
        android:id="@+id/button2"
        android:layout_width="89dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:text="@string/bt_tip10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_tipM" />

    <Button
        android:id="@+id/button3"
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="156dp"
        android:text="@string/bt_tip15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.654"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_tipM" />

    <Button
        android:id="@+id/button4"
        android:layout_width="89dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:text="@string/bt_tip20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.624"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_tipM" />

    <Button
        android:id="@+id/button5"
        android:layout_width="84dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:drawableEnd="@drawable/edit_alt24px"
        android:text="@string/bt_tipOther"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.908"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_tipM" />

</android.support.constraint.ConstraintLayout>