<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/r"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_app"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_login"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="52dp"
        android:layout_weight="1"
        android:fontFamily="@font/pizzaria"
        android:gravity="center"
        android:text="@string/txt_bienvenido_login"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/button_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="254dp"
        android:layout_height="52dp"
        android:layout_gravity="center"
        android:layout_margin="30dp"
        android:layout_marginBottom="32dp"
        android:layout_weight="1"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/louis_george_rg"
        android:padding="6dp"
        android:text="@string/txt_iniciar_sesion"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/button_registro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_registro"
        android:layout_width="254dp"
        android:layout_height="52dp"
        android:layout_gravity="center"
        android:layout_margin="30dp"
        android:layout_marginBottom="24dp"
        android:layout_weight="1"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/louis_george_rg"
        android:padding="6dp"
        android:text="@string/txt_registrarse"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95"
        app:layout_constraintGuide_begin="658dp" />

</android.support.constraint.ConstraintLayout>